--got rid of overflow with my modal, but the scrolling feature still isn't fixed

--- a/public/styles.css
+++ b/public/styles.css
@@ -399,11 +399,15 @@ body {
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: 10% 90%;
+  overflow: hidden;
 }
 
 table {
   grid-area: 2/1/3/2;
   background-color: rgb(201, 198, 198);
+  table-layout: fixed;
+  border-collapse: collapse;
+  overflow-y: scroll;
 }
 
 .table-heading {
